--- a/frank/stylesheets/scss/modules/_posts.scss
+++ b/frank/stylesheets/scss/modules/_posts.scss
@@ -1,5 +1,57 @@
-/* TODO: General cleanup */
-#content.home {
+.post-group { 
+	margin-top:0;
+	& ~ .post-group {
+		margin: $row-height*4 auto;
+	}
+}
+
+
+
+.post-title {
+	font-size: $font-size-large;
+}
+
+.post-header { 
+	margin-bottom: $row-height; 
+}
+.post-content {
+	font: #{$font-size-medium}/1.6 #{$typeface-primary};
+	p, ul li, ol li, dt, dd, blockquote { 
+		font-size: $font-size-medium; 
+	}
+	code, small { 
+		font-size: $font-size-small; 
+	}
+	img {
+		max-width: 100%;
+		@include default-shadow(); 
+	}
+}
+
+.post, .type-page {
+	margin: $row-height * 4 0;
+	&:first-child { 
+		margin-top: 0; 
+	}
+	&:last-child { 
+		margin-bottom: 0;
+	}
+	&.leftaside {
+		.post-content {
+			@extend .clearfix; 
+			@extend .column;
+			width: $nine-columns;
+			@extend .push-three;
+		}
+		.post-info {
+			@extend .column;
+			width: $three-columns;
+			@extend .pull-nine;
+		}
+	}
+}
+
+
 	.post-group-header {
 		margin-bottom:$row-height*2;
 		padding-bottom:5px;
@@ -80,7 +132,7 @@
 		margin-bottom: 0;
 		margin-top: $row-height * 3;
 	}
-}
+
 			
 			
 /*MOBILE*/
