--- a/frank/ie.css
+++ b/frank/ie.css
@@ -10,6 +10,10 @@ img {
   text-align: center;
 }
 
+label {
+  font: 700 13px Sans-Serif;
+}
+
 #top_bar {
   background: #050000;
 }
@@ -27,12 +31,28 @@ img {
   position: relative;
 }
 
-.post-group.twoup .post-3, .post-group.twoup .post-5, .post-group.twoup .post-7, .post-group.twoup .post-9, .post-group.twoup .post-11, .post-group.twoup .post-13, .post-group.twoup .post-15, .post-group.twoup .post-17, .post-group.twoup .post-19 {
+.post-group.twoup .post-3,
+.post-group.twoup .post-5,
+.post-group.twoup .post-7,
+.post-group.twoup .post-9,
+.post-group.twoup .post-11,
+.post-group.twoup .post-13,
+.post-group.twoup .post-15,
+.post-group.twoup .post-17,
+.post-group.twoup .post-19 {
   clear: left !important;
   margin-left: 0 !important;
 }
 
-.post-group.threeup .post-4, .post-group.threeup .post-7, .post-group.threeup .post-10, .post-group.threeup .post-13, .post-group.threeup .post-16, .post-group.threeup .post-19, .post-group.threeup .post-22, .post-group.threeup .post-25, .post-group.threeup .post-28 {
+.post-group.threeup .post-4,
+.post-group.threeup .post-7,
+.post-group.threeup .post-10,
+.post-group.threeup .post-13,
+.post-group.threeup .post-16,
+.post-group.threeup .post-19,
+.post-group.threeup .post-22,
+.post-group.threeup .post-25,
+.post-group.threeup .post-28 {
   clear: left !important;
   margin-left: 0 !important;
 }
@@ -52,16 +72,16 @@ img {
   margin-left: 0;
 }
 
-#comments-container #commentform label {
+#respond label {
   display: block;
 }
-#comments-container #commentform #comment-form-info label {
+#respond #comment-form-info label {
   text-align: right;
 }
-#comments-container #commentform #comment-form-info input[type=text] {
+#respond #comment-form-info input[type=text] {
   margin-bottom: 15px;
 }
-#comments-container #commentform textarea {
+#respond textarea {
   height: 137px;
 }
 
