--- a/somerandomdude/stylesheets/scss/ie.scss
+++ b/somerandomdude/stylesheets/scss/ie.scss
@@ -1,5 +1,6 @@
-@import "../../../frank/stylesheets/scss/variables";
-@import "variables";
+@import "../../../frank/stylesheets/scss/partials/_variables";
+@import "../../../frank/stylesheets/scss/partials/_mixins";
+@import "partials/_variables";
 @import "../../../frank/stylesheets/scss/ie";
 
 #projects_list li h3 small {
