Fixed issue where WordPress theme metadata was removed from style.css during compilation

--- a/somerandomdude/stylesheets/scss/style.scss
+++ b/somerandomdude/stylesheets/scss/style.scss
@@ -1,4 +1,4 @@
-/*
+/*!
 Theme Name:     Frank for Some Random Dude
 Theme URI:      http://somerandomdude.com/work/frank
 Description:    Child theme for the Frank theme 
