Basic support for attachment pages added (very basic)

--- a/frank/stylesheets/scss/style.scss
+++ b/frank/stylesheets/scss/style.scss
@@ -27,6 +27,7 @@ Tags: brown, red, white, two-columns, fixed-width, sticky-post, custom-menu
 @import "partials/_header";
 @import "partials/_single";
 @import "partials/_page";
+@import "partials/_attachment";
 @import "partials/_archive";
 @import "partials/_fourohfour";
 @import "partials/_sidebar";
