--- a/somerandomdude/stylesheets/scss/style.scss
+++ b/somerandomdude/stylesheets/scss/style.scss
@@ -27,6 +27,7 @@ Version:        0.1.0
 @import "../../../frank/stylesheets/scss/partials/_transitions";
 @import "../../../frank/stylesheets/scss/partials/_single";
 @import "../../../frank/stylesheets/scss/partials/_page";
+@import "../../../frank/stylesheets/scss/partials/_attachment";
 @import "../../../frank/stylesheets/scss/partials/_archive";
 @import "../../../frank/stylesheets/scss/partials/_fourohfour";
 @import "../../../frank/stylesheets/scss/partials/_sidebar";
