--- a/frank/style.css
+++ b/frank/style.css
@@ -1775,6 +1775,10 @@ button, .button, input[type=submit] {
   width: 100%;
 }
 
+#page.attachment #page-bottom {
+  display: none;
+}
+
 #content.archive #sidebar {
   margin-top: 60px;
 }
