Main tag switch and SASS fixes

--- a/frank/stylesheets/scss/editor-style.scss
+++ b/frank/stylesheets/scss/editor-style.scss
@@ -4,6 +4,7 @@ Description: Styles for the TinyMCE editor.
 */
 
 @import "partials/_variables";
+@import "partials/_mixins";
 @import "partials/_reset";
 @import "partials/_grid";
 
