--- a/somerandomdude/stylesheets/scss/partials/_variables.scss
+++ b/somerandomdude/stylesheets/scss/partials/_variables.scss
@@ -1,3 +1,4 @@
+/*TODO: Convert to SVG*/
 $checkbox-sprite:url('data:image/gif;base64,R0lGODlhCgAeAJEAAP76+mJVVF1QT8zMzCH5BAHoAwMALAAAAAAKAB4AAAIelI+py+0PYxu02ouz3rz7v0kiApRAkJhnaqJkO44FADs=');
 
 $typeface-secondary: "Helvetica Neue", sans-serif;
