--- a/somerandomdude/stylesheets/scss/style.scss
+++ b/somerandomdude/stylesheets/scss/style.scss
@@ -7,40 +7,40 @@ Author URI:     http://somerandomdude.com/hello/
 Template:       frank
 Version:        0.9.2
 */
-@import "../../../frank/stylesheets/scss/partials/_variables";
-@import "../../../frank/stylesheets/scss/partials/_mixins";
+@import "../../../frank/stylesheets/scss/partials/variables";
+@import "../../../frank/stylesheets/scss/partials/mixins";
 
-@import "partials/_variables";
+@import "partials/variables";
 
-@import "../../../frank/stylesheets/scss/partials/_reset";
-@import "../../../frank/stylesheets/scss/partials/_grid";
-@import "../../../frank/stylesheets/scss/partials/_global";
+@import "../../../frank/stylesheets/scss/partials/reset";
+@import "../../../frank/stylesheets/scss/partials/grid";
+@import "../../../frank/stylesheets/scss/partials/global";
 
-@import "../../../frank/stylesheets/scss/modules/_typography";
-@import "../../../frank/stylesheets/scss/modules/_buttons";
-@import "../../../frank/stylesheets/scss/modules/_metadata";
-@import "../../../frank/stylesheets/scss/modules/_wordpress";
-@import "../../../frank/stylesheets/scss/modules/_widgets";
-@import "../../../frank/stylesheets/scss/modules/_forms";
+@import "../../../frank/stylesheets/scss/modules/typography";
+@import "../../../frank/stylesheets/scss/modules/buttons";
+@import "../../../frank/stylesheets/scss/modules/metadata";
+@import "../../../frank/stylesheets/scss/modules/wordpress";
+@import "../../../frank/stylesheets/scss/modules/widgets";
+@import "../../../frank/stylesheets/scss/modules/forms";
 
-@import "../../../frank/stylesheets/scss/partials/_transitions";
-@import "../../../frank/stylesheets/scss/partials/_single";
-@import "../../../frank/stylesheets/scss/partials/_page";
-@import "../../../frank/stylesheets/scss/partials/_posts";
-@import "../../../frank/stylesheets/scss/partials/_attachment";
-@import "../../../frank/stylesheets/scss/partials/_archive";
-@import "../../../frank/stylesheets/scss/partials/_fourohfour";
-@import "../../../frank/stylesheets/scss/partials/_sidebar";
-@import "../../../frank/stylesheets/scss/partials/_comments";
-@import "../../../frank/stylesheets/scss/partials/_footer";
+@import "../../../frank/stylesheets/scss/partials/transitions";
+@import "../../../frank/stylesheets/scss/partials/single";
+@import "../../../frank/stylesheets/scss/partials/page";
+@import "../../../frank/stylesheets/scss/partials/posts";
+@import "../../../frank/stylesheets/scss/partials/attachment";
+@import "../../../frank/stylesheets/scss/partials/archive";
+@import "../../../frank/stylesheets/scss/partials/fourohfour";
+@import "../../../frank/stylesheets/scss/partials/sidebar";
+@import "../../../frank/stylesheets/scss/partials/comments";
+@import "../../../frank/stylesheets/scss/partials/footer";
 
-@import "partials/_global";
-@import "partials/_transitions";
-@import "partials/_header";
-@import "partials/_index";
-@import "partials/_single";
-@import "partials/_sidebar";
-@import "partials/_footer";
-@import "partials/_pages";
-@import "partials/_lightbox";
-@import "partials/_slideshow";
+@import "partials/global";
+@import "partials/transitions";
+@import "partials/header";
+@import "partials/index";
+@import "partials/single";
+@import "partials/sidebar";
+@import "partials/footer";
+@import "partials/pages";
+@import "partials/lightbox";
+@import "partials/slideshow";
